<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0091EA"
    tools:context=".Bmi">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerhorizontaline"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerverticaline"/>

     <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="-173dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="59dp"
        android:layout_toStartOf="@+id/centerverticaline"
        android:background="@drawable/gendernotfocus">

        <ImageView
            android:layout_width="200px"
            android:layout_height="170px"
            android:layout_above="@+id/textmale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/man"
            android:layout_centerInParent="true">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/textmale"
            android:text="Male"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginStart="-174dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="-173dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="59dp"
        android:layout_toEndOf="@+id/centerverticaline"
        android:background="@drawable/gendernotfocus">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/elf">

        </ImageView>

        <TextView
            android:id="@+id/textfemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="Female"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="145dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="-184dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bmi_background"
        android:layout_toStartOf="@id/centerverticaline">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currentweight"
            android:text="55"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textAlignment="center">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decreaseweight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/plus">

            </ImageView>




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/increaseweight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/subtract">

            </ImageView>


        </RelativeLayout>




    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/age"
        android:layout_width="145dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginStart="-185dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="-184dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/centerverticaline"
        android:background="@drawable/bmi_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="18"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decreaseage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/plus">

            </ImageView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/increaseage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/subtract">

            </ImageView>


        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightlayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@+id/centerhorizontaline"
        android:layout_marginBottom="-50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/bmi_background"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="170"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textSize="40sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:id="@+id/currentheight">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/currentheight"
            android:layout_marginStart="20dp">

        </TextView>



        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="@color/purple_200" />





    </RelativeLayout>
    

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/calculatebmi"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/calculate_background"
        android:textStyle="bold">

    </android.widget.Button>

</RelativeLayout>